# hermes-cron-plus

./: CHANGELOG.md  LICENSE  README.md  WHY.md  __init__.py  cli.py  jobs.py  migrate.py  plugin.yaml  pyproject.toml  runner.py  scheduler.py
docs/: UPSTREAM_HERMES_CRON_BUG_REPORT.md
tests/: conftest.py  test_backports.py  test_jobs.py  test_review_fixes.py  test_round3.py  test_scheduler.py
