# cron-plus is primarily distributed by git-clone-as-plugin-directory
# (matching the hermes-web-search-plus convention). This pyproject.toml
# exists so:
#   - dev contributors can `pip install -e ".[dev]"` for an isolated
#     test environment that doesn't depend on a Hermes venv being mounted
#   - `pytest` runs hermetically with all required deps
#
# It does NOT expose a Hermes plugin entry point — Hermes' plugin loader
# discovers the plugin from ~/.hermes/plugins/cron-plus/ via plugin.yaml.

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-cron-plus"
version = "0.1.0"
description = "Subprocess-per-job cron scheduler plugin for Hermes Agent."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "jalewis"}]
requires-python = ">=3.10"
keywords = ["hermes", "hermes-agent", "cron", "scheduler", "plugin"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "croniter>=2.0",
  "PyYAML>=5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/jalewis/hermes-cron-plus"
Issues = "https://github.com/jalewis/hermes-cron-plus/issues"
Repository = "https://github.com/jalewis/hermes-cron-plus"

# This package is not pip-distributable as a Hermes plugin — Hermes
# discovers plugins from a directory layout, not entry points. The
# package metadata above is for dev/test workflows only.
[tool.setuptools]
py-modules = ["__init__", "scheduler", "jobs", "runner", "cli", "migrate"]

[tool.pytest.ini_options]
testpaths = ["tests"]
