# cron-plus supports two distribution paths:
#   1. Drop-in directory plugin: `git clone` into ~/.hermes/plugins/cron-plus/
#      and Hermes' plugin loader discovers it via plugin.yaml.
#   2. Pip-installable: `pip install hermes-cron-plus`. Hermes auto-discovers
#      via the [project.entry-points."hermes_agent.plugins"] entry below.
#
# The package is exposed as `cron_plus` (underscore — hyphen isn't a valid
# Python identifier). The Hermes plugin manifest name (cron-plus, with
# hyphen) is unchanged; the entry-point key matches the manifest.
#
# Dev / test:
#   pip install -e ".[dev]"
#   pytest

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-cron-plus"
version = "0.1.0"
description = "Subprocess-per-job cron scheduler plugin for Hermes Agent."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "jalewis"}]
requires-python = ">=3.10"
keywords = ["hermes", "hermes-agent", "cron", "scheduler", "plugin"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "croniter>=2.0",
  "PyYAML>=5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/jalewis/hermes-cron-plus"
Issues = "https://github.com/jalewis/hermes-cron-plus/issues"
Repository = "https://github.com/jalewis/hermes-cron-plus"

[project.entry-points."hermes_agent.plugins"]
cron-plus = "cron_plus"

# The repository root IS the cron_plus package — flat layout. We map the
# package name (with underscore) to the current directory so `import
# cron_plus` works after `pip install`. plugin.yaml is bundled as
# package-data so Hermes can find the manifest at runtime via
# importlib.resources, regardless of install path.
[tool.setuptools]
packages = ["cron_plus"]
package-dir = {"cron_plus" = "."}

[tool.setuptools.package-data]
"cron_plus" = ["plugin.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
